src/test/contracts/negative/pattern_matching_anomalies/redundant_case/w_tx_ty.mligo
type p = One | Two

type t = (int * p)

let s (x : t) = 
  match x with
    _        -> ()
  | (n, One) -> ()
  | (n, Two) -> ()